@@ -382,7 +382,7 @@
 	<td class="other_ref" data-sort-value="{_it.@ref}">{_it.@ref||}</td>
 	<td class="owner_ref" data-sort-value="{_it./owner-org@ref}">
 		{_it./owner-org@ref||}
-		{_it./owner-org/narrative&&_it:/owner-org||}
+		{_it./owner-org/narrative.0.text&&_it:/owner-org||}
 	</td>
 	<td class="other_type" data-sort-value="{_it.@type}">
 		{_it.@type-name||}
@@ -395,7 +395,7 @@
 <div><span class="ref">CODE</span> {_it.@type}</div>
 
 #^/owner-org
-<div>{_it./owner-org/narrative.0.text||}</div>
+<div>{_it./owner-org/narrative:/narrative||}</div>
 
 #^/wrap-capital-spend	<!--	CAPITAL SPEND WRAPPER	-->
 	<div class="header_section collapsable">capital spend</div>
@@ -449,10 +449,10 @@
 #^/contact-info	<!--	CONTACT INFO	-->
 <div class="contact_info">
 {_it.@type&&_it:/contact-type||}
-{_it./organisation/narrative&&_it:/wrap-organisation||}
-{_it./department/narrative&&_it:/wrap-department||}
-{_it./person-name/narrative&&_it:/wrap-person-name||}
-{_it./job-title/narrative&&_it:/wrap-job-title||}
+{_it./organisation/narrative.0.text&&_it:/wrap-organisation||}
+{_it./department/narrative.0.text&&_it:/wrap-department||}
+{_it./person-name/narrative.0.text&&_it:/wrap-person-name||}
+{_it./job-title/narrative.0.text&&_it:/wrap-job-title||}
 {_it./telephone.0.text&&_it:/wrap-telephone||}
 {_it./email.0.text&&_it:/wrap-email||}
 {_it./website.0.text&&_it:/wrap-website||}
@@ -460,13 +460,13 @@
 </div>
 
 #^/wrap-organisation	<!--	CONTACT INFO TEXT WRAPPERS	-->
-<div class="wrap_contact_org">{_it./organisation/narrative.0.text||}</div>
+<div class="wrap_contact_org">{_it./organisation/narrative:/narrative||}</div>
 #^/wrap-department
-<div class="wrap_contact_dept">{_it./department/narrative.0.text||}</div>
+<div class="wrap_contact_dept">{_it./department/narrative:/narrative||}</div>
 #^/wrap-person-name
-<div class="wrap_contact_name">{_it./person-name/narrative.0.text||}</div>
+<div class="wrap_contact_name">{_it./person-name/narrative:/narrative||}</div>
 #^/wrap-job-title
-<div class="wrap_contact_title">{_it./job-title/narrative.0.text||}</div>
+<div class="wrap_contact_title">{_it./job-title/narrative:/narrative||}</div>
 #^/wrap-telephone
 <div class="wrap_contact_tel">{_it./telephone:/info_text}</div>
 #^/wrap-email
@@ -1212,11 +1212,11 @@
 </tr>
 
 #^/description/narrative
-<div class="description_text">{_it./description/narrative.0.text||}</div>
+<div class="description_text">{_it./description/narrative:/narrative||}</div>
 #^/provider-org/narrative
-<div class="provider_text">{_it./provider-org/narrative.0.text||}</div>
+<div class="provider_text">{_it./provider-org/narrative:/narrative||}</div>
 #^/receiver-org/narrative
-<div class="receiver_text">{_it./receiver-org/narrative.0.text||}</div>
+<div class="receiver_text">{_it./receiver-org/narrative:/narrative||}</div>
 
 #^/trans-ref
 <div>
@@ -1918,7 +1918,7 @@
 #^iati-organisation
 <div class="org">
 	<div class="header">ORGANISATION FILE</div>
-	<div class="wrap_name_org">{_it./name/narrative.0.text||}</div>
+	<div class="wrap_name_org">{_it./name/narrative:/narrative||}</div>
 	<div class="wrap_reporting_org">	<!--	REPORTING ORG	-->
 		<div class="text">Reported by</div><div class="reporting_org"><a href="{origin}/ctrack.html?publisher={_it./reporting-org@ref}" target="blank">{_it./reporting-org/narrative.0.text||}</a> <span class="ref">{_it./reporting-org@ref||}</span> <span class="type">{_it./reporting-org@type-name||}</span>{_it./reporting-org@secondary-reporter==1&&secondary_reporter||}</div>
 	</div>
