@@ -1,6 +1,11 @@
 Development Portal (2022-03-23 shi)
 ==============================
 Display all narratives for result comments in SAVi
+Display all narratives for transaction columns in SAVi
+Display all narratives for owner-org in SAVi
+Display all narratives for contact-info in SAVi
+Display all narratives for Organisation name in SAVi
+Update css for new narratives
 
 
 Development Portal (2022-03-22 shi)
